[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.99", features = ["api-all", "system-tray"] }
wallpaper = { version = "3", features = ["from_url"] }
reqwest = { features = ["json"] }
tempdir = "*"
tokio = { version = "1", features = ["full"] }
rand = "*"
window-shadows = "0.2.0"
# diesel = { version = "2.0.0", features = ["sqlite"] }
# diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
tauri-plugin-autostart = "*"
image = "0.24.6"
async-std = "1.10.0"
futures = "0.3.28"
base64 = "0.21.4"

[patch.crates-io]
wry = { path = "./packages/wry-cors" }
tauri = { path = "./packages/tauri-dev/core/tauri"}
tauri-plugin-autostart = { path = "./packages/tauri-plugin-autostart" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
